--- a/todo-react/src/App.css
+++ b/todo-react/src/App.css
@@ -1,3 +1,11 @@
-.App {
-  margin: 3rem auto;
+ul.navMenu {
+    display:flex;
+    list-style: none;
+    border-bottom: 2px solid #ccc;
+    padding: 1rem;
+    margin: 0;
+}
+
+ul.navMenu > li {
+    margin-right: 0.5rem;
 }
